objects/Account_Level_ECP__c.object
<CustomObject>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_PharmaceuticalsB__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_PharmaceuticalsB</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_ProfessionalTech__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_ProfessionalTech</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_RealEstateRental__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_RealEstateRental</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Retail__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Retail</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_TechnologyHardwa__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_TechnologyHardwa</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_TechnologySoftwa__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_TechnologySoftwa</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Telecommunicatio__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Telecommunicatio</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_TransportationWa__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_TransportationWa</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_TravelLeisureHos__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_TravelLeisureHos</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_INDUSTRY_Utilities__c</fullName>
		<label>PARENT_ACCOUNT_INDUSTRY_Utilities</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_SALES_Missing_Ind__c</fullName>
		<label>PARENT_ACCOUNT_SALES_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>PARENT_ACCOUNT_SALES__c</fullName>
		<label>PARENT_ACCOUNT_SALES</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Parent_account_identifier__c</fullName>
		<label>Parent account identifier</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Parent_account_name__c</fullName>
		<label>Parent account name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Profound_Change__c</fullName>
		<label>Profound___Change</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Device_Count_201503__c</fullName>
		<label>Profound_Device_Count_201503</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Domain_Count__c</fullName>
		<label>Profound_Domain_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_External_Links_Homepage_Count__c</fullName>
		<label>Profound_External_Links_Homepage_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Local_Links_Homepage_Count__c</fullName>
		<label>Profound_Local_Links_Homepage_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Local_Links_Level_2_Count__c</fullName>
		<label>Profound_Local_Links_Level_2_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Missing_Ind__c</fullName>
		<label>Profound_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Subdomain_Count__c</fullName>
		<label>Profound_Subdomain_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Unique_Email_User_Count__c</fullName>
		<label>Profound_Unique_Email_User_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_Web_Server_Count__c</fullName>
		<label>Profound_Web_Server_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_avg_Cloud_Density__c</fullName>
		<label>Profound_avg_Cloud_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_avg_DBI_Density__c</fullName>
		<label>Profound_avg_DBI_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_avg_IaaS_Density__c</fullName>
		<label>Profound_avg_IaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_avg_PaaS_Density__c</fullName>
		<label>Profound_avg_PaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_avg_SaaS_Density__c</fullName>
		<label>Profound_avg_SaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_max_Cloud_Density__c</fullName>
		<label>Profound_max_Cloud_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_max_DBI_Density__c</fullName>
		<label>Profound_max_DBI_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_max_IaaS_Density__c</fullName>
		<label>Profound_max_IaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_max_PaaS_Density__c</fullName>
		<label>Profound_max_PaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Profound_max_SaaS_Density__c</fullName>
		<label>Profound_max_SaaS_Density</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>REMAINING_OPP__c</fullName>
		<label>REMAINING_OPP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Rankings_List_FORTUNE_1000_Missing_Ind__c</fullName>
		<label>Rankings_List_FORTUNE_1000_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Rankings_List_FORTUNE_1000__c</fullName>
		<label>Rankings_List_FORTUNE_1000</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>STAR_1__c</fullName>
		<label>STAR_1</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>STAR_2__c</fullName>
		<label>STAR_2</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>STAR_3__c</fullName>
		<label>STAR_3</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Subsidiary_account_identifier__c</fullName>
		<label>Subsidiary account identifier</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Subsidiary_account_name__c</fullName>
		<label>Subsidiary account name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>TOT_OPP_HIGH__c</fullName>
		<label>TOT_OPP_HIGH</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>TOT_OPP_LOW__c</fullName>
		<label>TOT_OPP_LOW</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>TOT_OPP_MEAN__c</fullName>
		<label>TOT_OPP_MEAN</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Top_AEC_POI_Based_on_MTD_Visits__c</fullName>
		<label>Top AEC POI Based on MTD Visits</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Top_AEC_POI_Based_on_QTD_Visits__c</fullName>
		<label>Top AEC POI Based on QTD Visits</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Top_AEC_POI_Based_on_YTD_Visits__c</fullName>
		<label>Top AEC POI Based on YTD Visits</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Email_Clicks__c</fullName>
		<label>Total AEC Email Clicks</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Page_Visits__c</fullName>
		<label>Total AEC Page Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Adobe_Event__c</fullName>
		<label>Total AEC Responses Adobe Event</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Adobecom__c</fullName>
		<label>Total AEC Responses Adobe.com</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Content_Syn__c</fullName>
		<label>Total AEC Responses Content Syn</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Dinner__c</fullName>
		<label>Total AEC Responses Dinner</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_ESeminar__c</fullName>
		<label>Total AEC Responses E-Seminar</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_PRAR__c</fullName>
		<label>Total AEC Responses PR/AR</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Paid_Advertising__c</fullName>
		<label>Total AEC Responses Paid Advertising</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Search__c</fullName>
		<label>Total AEC Responses Search</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Social__c</fullName>
		<label>Total AEC Responses Social</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_Sporting_Event__c</fullName>
		<label>Total AEC Responses Sporting Event</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Total_AEC_Responses_TradeshowConference__c</fullName>
		<label>Total AEC Responses Tradeshow/Conference</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>UPSELL_NEXT_YEAR_OPP__c</fullName>
		<label>UPSELL_NEXT_YEAR_OPP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Visit_Geo__c</fullName>
		<label>Visit Geo</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>comScore_App_Missing_Ind__c</fullName>
		<label>comScore_App_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Mobile_APP_Count__c</fullName>
		<label>comScore_App_Mobile_APP_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Mobile_Avg_Min_per_Visitor__c</fullName>
		<label>comScore_App_Mobile_Avg_Min_per_Visitor_</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Mobile_Min_per_APP__c</fullName>
		<label>comScore_App_Mobile_Min_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Mobile_UV_per_APP__c</fullName>
		<label>comScore_App_Mobile_UV_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Smartphone_UV_per_APP__c</fullName>
		<label>comScore_App_Smartphone_UV_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Smartphones_Avg_Min_per_Vis__c</fullName>
		<label>comScore_App_Smartphones_Avg_Min_per_Vis</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Smartphones_Exclusive_UV_pe__c</fullName>
		<label>comScore_App_Smartphones_Exclusive_UV_pe</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Smartphones_Min_per_APP__c</fullName>
		<label>comScore_App_Smartphones_Min_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Tablets_Avg_Min_per_Visitor__c</fullName>
		<label>comScore_App_Tablets_Avg_Min_per_Visitor</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Tablets_Exclusive_UV_per_AP__c</fullName>
		<label>comScore_App_Tablets_Exclusive_UV_per_AP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Tablets_Min_per_APP__c</fullName>
		<label>comScore_App_Tablets_Min_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Tablets_UV_per_APP__c</fullName>
		<label>comScore_App_Tablets_UV_per_APP</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Total_APP_Min__c</fullName>
		<label>comScore_App_Total_APP_Min</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_App_Total_APP_UV__c</fullName>
		<label>comScore_App_Total_APP_UV</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Advertiser_Count__c</fullName>
		<label>comScore_Display_Advertiser_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Annualized_Impressions__c</fullName>
		<label>comScore_Display_Annualized_Impressions_</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Annualized_Spend_USD_00__c</fullName>
		<label>comScore_Display_Annualized_Spend_USD_00</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Avg_Impressions_000__c</fullName>
		<label>comScore_Display_Avg_Impressions_000</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Avg_Spend_USD_000__c</fullName>
		<label>comScore_Display_Avg_Spend_USD_000</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Display_Missing_Ind__c</fullName>
		<label>comScore_Display_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Mins_Per_UV_per_Domain__c</fullName>
		<label>comScore_Web_Desk_Mins_Per_UV_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Mth_Mins_per_Domain__c</fullName>
		<label>comScore_Web_Desk_Mth_Mins_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Mth_PVs_per_Domain__c</fullName>
		<label>comScore_Web_Desk_Mth_PVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Mth_UVs_per_Domain__c</fullName>
		<label>comScore_Web_Desk_Mth_UVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Mth_Visits_per_Domain__c</fullName>
		<label>comScore_Web_Desk_Mth_Visits_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_PVs_Per_UV_per_Domain__c</fullName>
		<label>comScore_Web_Desk_PVs_Per_UV_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Desk_Visits_Per_UV_per_Doma__c</fullName>
		<label>comScore_Web_Desk_Visits_Per_UV_per_Doma</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Domain_Count__c</fullName>
		<label>comScore_Web_Domain_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Missing_Ind__c</fullName>
		<label>comScore_Web_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Mins_Per_UV_per_Doma__c</fullName>
		<label>comScore_Web_Mobile_Mins_Per_UV_per_Doma</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Mth_Mins_per_Domain__c</fullName>
		<label>comScore_Web_Mobile_Mth_Mins_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Mth_PVs_per_Domain__c</fullName>
		<label>comScore_Web_Mobile_Mth_PVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Mth_UVs_per_Domain__c</fullName>
		<label>comScore_Web_Mobile_Mth_UVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Mth_Visits_per_Domai__c</fullName>
		<label>comScore_Web_Mobile_Mth_Visits_per_Domai</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_PVs_Per_UV_per_Domai__c</fullName>
		<label>comScore_Web_Mobile_PVs_Per_UV_per_Domai</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Mobile_Visits_Per_UV_per_Do__c</fullName>
		<label>comScore_Web_Mobile_Visits_Per_UV_per_Do</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mins_Per_UV_per_Domai__c</fullName>
		<label>comScore_Web_Total_Mins_Per_UV_per_Domai</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_Mins__c</fullName>
		<label>comScore_Web_Total_Mth_Mins</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_Mins_per_Domain__c</fullName>
		<label>comScore_Web_Total_Mth_Mins_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_UVs__c</fullName>
		<label>comScore_Web_Total_Mth_UVs</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_UVs_per_Domain__c</fullName>
		<label>comScore_Web_Total_Mth_UVs_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_Visits__c</fullName>
		<label>comScore_Web_Total_Mth_Visits</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Mth_Visits_per_Domain__c</fullName>
		<label>comScore_Web_Total_Mth_Visits_per_Domain</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>comScore_Web_Total_Visits_Per_UV_per_Dom__c</fullName>
		<label>comScore_Web_Total_Visits_Per_UV_per_Dom</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Avg_Links_Broken__c</fullName>
		<label>eDataSource_Avg_Links_Broken</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Avg_Links__c</fullName>
		<label>eDataSource_Avg_Links</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Avg_Redirects_Broken__c</fullName>
		<label>eDataSource_Avg_Redirects_Broken</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Avg_Redirects__c</fullName>
		<label>eDataSource_Avg_Redirects</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Click_Rate__c</fullName>
		<label>eDataSource_Click_Rate</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Days_Since_Last_Campaign__c</fullName>
		<label>eDataSource_Days_Since_Last_Campaign</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Delete_Ratio__c</fullName>
		<label>eDataSource_Delete_Ratio</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_ESP_Count__c</fullName>
		<label>eDataSource_ESP_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Email_Domain_Count__c</fullName>
		<label>eDataSource_Email_Domain_Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Emails_Deleted__c</fullName>
		<label>eDataSource_Emails_Deleted</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Emails_Read_Delete__c</fullName>
		<label>eDataSource_Emails_Read_Delete</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Emails_Read_Only__c</fullName>
		<label>eDataSource_Emails_Read_Only</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Emails_Read__c</fullName>
		<label>eDataSource_Emails_Read</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_List_Size__c</fullName>
		<label>eDataSource_List_Size</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Missing_Ind__c</fullName>
		<label>eDataSource_Missing_Ind</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Placement_Ratio__c</fullName>
		<label>eDataSource_Placement_Ratio</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Read_Delete_Ratio__c</fullName>
		<label>eDataSource_Read_Delete_Ratio</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_Read_Only_Ratio__c</fullName>
		<label>eDataSource_Read_Only_Ratio</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_of_Campaigns__c</fullName>
		<label>eDataSource___of_Campaigns</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_of_Emails_Placed__c</fullName>
		<label>eDataSource___of_Emails_Placed</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>eDataSource_of_Emails__c</fullName>
		<label>eDataSource___of_Emails</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Account Level ECP</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>ALECP-{000000000}</displayFormat>
		<label>Account Level ECP Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Account Level ECP</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>